@@ -2,3 +2,4 @@ AR America/Buenos_Aires
 GB Europe/London
 MH Pacific/Majuro
 ML Africa/Bamako
+MY Asia/Kuala_Lumpur
